fixing centering on mobile

--- a/Style.css
+++ b/Style.css
@@ -51,6 +51,7 @@ body{
     padding: 1vw;
     background-image: linear-gradient(#FEC89A,#FFE5D9);
     justify-content: center; 
+    text-align: center;
 }
 #heading{
     text-align: center;
@@ -73,11 +74,11 @@ body{
     text-shadow: .4vw .2vw rgb(57, 68, 59);
     justify-content: center; 
     text-align: center;
-    padding-top: .01vw;
-    padding-bottom: 0vw;
+    padding:1vw;
     font-size: 5vw;
     text-decoration: none;
     font-family: Lobster;
+    display: flex;
 }
 #links:hover{
     color:#637269;
